Implemented Game and Profile button functionality. - Fixed some css styles to the game canvas so it doesn't hide the navbar

--- a/react/frontend/src/components/game/css/Ping.css
+++ b/react/frontend/src/components/game/css/Ping.css
@@ -44,7 +44,7 @@
   
   canvas {
       position: absolute;
-      top: 0;
+      top: 5%;
       left: 0;
       width: 100%;
       height: 100%;
@@ -52,7 +52,7 @@
   
   .canvas-background {
       position: absolute;
-      top: 0;
+      top: 5%;
       left: 0;
       width: 100%;
       height: 100%;
