--- a/react/frontend/src/components/game/css/Ping.css
+++ b/react/frontend/src/components/game/css/Ping.css
@@ -9,11 +9,19 @@
   .digital-number {
               font-variant-numeric: slashed-zero;
               /* font-family: "slashed-zero", monospace; */
-              font-size: 3em;
-              letter-spacing: 1em;
+              font-size: 2em;
+              letter-spacing: 0.2em;
               color: skyblue;
               padding: 0.2em;
           }
+        .player-name {
+          font-variant-numeric: slashed-zero;
+          /* font-family: "slashed-zero", monospace; */
+          font-size: 2em;
+          letter-spacing: 0.2em;            
+          color: skyblue;
+          padding: 0.2em
+        }
   
   .Winner {
       /* font-variant-numeric: slashed-zero; */
@@ -31,31 +39,36 @@
       color: skyblue;
       padding: 0.2em;
   }
-    .canvas-container {
+    /* .canvas-container {
       position: relative;
       width: 100%;
-      max-width: 640px; /* Limit the maximum width */
+      max-width: 640px; 
       height: auto;
       padding-bottom: 75%;
       max-height: 480px;
       border: 1px solid black;
       overflow: hidden;
-  }
+  } */
   
   canvas {
-      position: absolute;
+      position: relative;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
+      max-width: 640px;
+      max-height: 480px;
+      background-image: url('./pong.png');
+      background-size: cover;
+      /* padding-bottom: 75%; */
   }
   .responsive-wrapper {
-    position: relative;
+    position: absolute;
     width: 100%;
-    padding-top: 75%; /* 4:3 aspect ratio (4 / 3 = 0.75) */
+    /* padding-top: 75%; */
   }
   
-  .canvas-background {
+  /* .canvas-background {
       position: absolute;
       top: 0;
       left: 0;
@@ -63,7 +76,7 @@
       height: 100%;
       background-image: url('./pong.png');
       background-size: cover;
-  }
+  } */
 
   .button-container {
     display: flex;
