--- a/react/frontend/src/components/css/navbar.css
+++ b/react/frontend/src/components/css/navbar.css
@@ -1,4 +1,3 @@
-/* Styles for the Navbar */
 .navbar {
     background: linear-gradient(90deg, rgba(36, 36, 36, 0.9), rgba(36, 36, 36, 0.7));
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -11,4 +10,37 @@
     color: #fff !important;
     transition: color 0.3s ease;
   }
+  .navbar-brand:hover {
+    color: #ff6f61 !important;
+  }
+  
+  .navbar-nav .nav-link {
+    font-family: 'Poppins', sans-serif;
+    color: #fff !important;
+    margin-right: 1rem;
+    transition: color 0.3s ease, transform 0.3s ease;
+  }
+  
+  .navbar-nav .nav-link:hover {
+    color: #ff6f61 !important;
+    transform: scale(1.1);
+  }
+  
+  .navbar-toggler {
+    border: none;
+  }
+    
+  .navbar-collapse {
+    justify-content: flex-end;
+  }
+  
+  .d-flex .btn-outline-success {
+    color: #f3dcdc;
+    border-color: #ff6f61;
+    transition: background 0.3s ease, color 0.3s ease;
+  }
+  .navbar {
+    animation: slideIn 1s ease;
+  }
+
   
