--- a/react/frontend/src/components/game/css/Ping.css
+++ b/react/frontend/src/components/game/css/Ping.css
@@ -1,4 +1,33 @@
 
+
+.result-display {
+  position: absolute;
+  top: 0%;
+  left: 40%;
+  font-family: 'Arial', sans-serif; /* Use a clear and readable font */
+  font-size: 18px; /* Set an appropriate font size */
+  color: black; /* Text color */
+  background-color: lightgray; /* Background color for better contrast */
+  /* padding: 10px;  */
+  padding: 0.2em;
+  border: 1px solid black; /* Border around the div */
+  border-radius: 4px; /* Rounded corners */
+  text-align: center; /* Center the text horizontally */
+  display: inline-block; /* Ensure the div fits the content */
+  margin-bottom: 10px; /* Space below the result display */
+
+  /* font-variant-numeric: slashed-zero; */
+          /* font-family: "slashed-zero", monospace; */
+          /* font-size: 2em; */
+          /* letter-spacing: 0.2em;             */
+          /* color: skyblue; */
+}
+
+.result-display span {
+  margin: 0 5px; /* Add some margin between the spans */
+}
+
+
 .buttonChoices {
     font-family: "slashed-zero", monospace;
       font-size: 1em;
@@ -54,7 +83,8 @@
   
   canvas {
       position: relative;
-      top: 0;
+      /* padding-top: 50%; */
+      top: 0px;
       left: 0;
       width: 100%;
       height: 100%;
