--- a/react/frontend/src/components/css/profile.css
+++ b/react/frontend/src/components/css/profile.css
@@ -1,16 +1,30 @@
+.div_global{
+  background-color: #c3cccc;
+  width: 100%;
+  height: 100%;
+}
 .profile-container {
-  height: 100vh;
+  margin: 0 auto;
+  max-width: 1600px; 
   border-radius: 30px;
+  animation: fadeIn 1s ease-in-out;
+  padding-bottom: 40%;
 }
 
 .left-sidebar {
-  background-color: #f8f9fa;
+  background-color: #469191;
   padding: 20px;
+  margin-top: 220px;
+  border-radius: 30px;
+  border-right: 1px solid #dee2e6; 
 }
 
 .right-sidebar {
-  background-color: #e9ecef;
+  background-color:  #469191;
   padding: 20px;
+  margin-top: 220px;
+  border-radius: 30px;
+  border-left: 1px solid #dee2e6; 
 }
 
 .profile-pic {
