--- a/react/frontend/src/components/css/LoginPage.css
+++ b/react/frontend/src/components/css/LoginPage.css
@@ -8,6 +8,7 @@ body {
   border-radius: 15px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 30px;
+
 }
 
 h2 {
@@ -177,4 +178,8 @@ h2 {
 
 .form-footer a:hover {
   text-decoration: underline;
+}
+.img-thumbnail{
+  width: 20%;
+  align-items: center;
 }
