read Game names from local data & fix background issues

--- a/react/frontend/src/components/game/css/Ping.css
+++ b/react/frontend/src/components/game/css/Ping.css
@@ -81,7 +81,7 @@
       overflow: hidden;
   } */
   
-  canvas, .2d-game {
+  canvas{
       position: relative;
       /* padding-top: 50%; */
       top: 0px;
