--- a/react/frontend/src/components/css/profile.css
+++ b/react/frontend/src/components/css/profile.css
@@ -1,6 +1,7 @@
 .div_global{
   width: 100%;
   height: 100%;
+  background-color: #fff;
 }
 .profile-container {
   margin: 0 auto;
@@ -8,6 +9,7 @@
   border-radius: 30px;
   animation: fadeIn 1s ease-in-out;
   padding-bottom: 40%;
+  margin-top: -150px;
 }
 
 .left-sidebar {
