--- a/react/frontend/src/components/Chat/App.css
+++ b/react/frontend/src/components/Chat/App.css
@@ -11,7 +11,7 @@ body {
 }
 
 body {
-  /* background-image: url('../img/masthead.jpg'); */
+  background-image: url('../img/bg-masthead.jpg');
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   /* background-size: cover;
   background-repeat: no-repeat;
