changing some frontend ...

--- a/react/frontend/src/components/css/friends.css
+++ b/react/frontend/src/components/css/friends.css
@@ -1,4 +1,4 @@
-.suggested-info, .friends-list {
+/* .suggested-info, .friends-list {
     margin: 2em auto;
     padding: 1em;
     max-width: 1200px;
@@ -27,4 +27,4 @@
   .table tr:hover {
     background-color: #f1f1f1;
   }
-  
+   */
